comitando ultimas alterações

--- a/desafio/src/main/webapp/categoriapadrao.xhtml
+++ b/desafio/src/main/webapp/categoriapadrao.xhtml
@@ -9,7 +9,7 @@
     	<h2>TISS - Importação do CSV de Categorias Padrão</h2>
     	<h:form>
     		<h:panelGrid columns="3">
-	    		<h:outputLabel for="diretorioZip" value="Diretório do zip (caso não seja informado, o zip será pego do resource)"/>
+	    		<h:outputLabel for="diretorioZip" value="Diretório do zip"/>
 	    		<h:inputText id="diretorioZip" value="#{categoriaPadraoController.diretorioZip}"/>
 	    		<h:commandButton value="Importar csv" action="#{categoriaPadraoController.processaCategoriaPadrao}"></h:commandButton>
     		</h:panelGrid>
